[workspace]
members = [
    "ola_core",
    "config",
    "basic_types",
    "types",
    "dal",
    "utils",
    "contracts",
    "web3_decl",
    "state",
    "health_check",
    "logs",
    "vm",
    "mempool",
    "storage",
    "client/cli",
    "client/sdk",
    "object_store",
    "queued_job_processor",
]
resolver = "2"
