[workspace]
members = [
    "ola_core",
    "config",
    "basic_types",
    "types",
    "dal",
    "utils",
    "contracts",
    "web3_decl",
    "state",
    "health_check",
    "logs",
    "vm",
    "mempool",
    "storage",
    "client/cli",
    "client/sdk",
    "object_store",
    "queued_job_processor",
    "prover/prover_fri_gateway",
    # "prover/witness_generator",
    "merkle_tree"
]
resolver = "2"
