[package]
name = "ola_config"
version = "0.1.0"
edition = "2021"

[dependencies]
ola_basic_types ={ path = "../basic_types"}
ola_utils ={ path = "../utils"}
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.11"
once_cell = "1.13.0"
olavm_exe_core = {package = "core", git = "https://github.com/Sin7Y/olavm.git", branch = "develop"}