[package]
name = "ola_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
ola_basic_types = { path = "../basic_types" }
ola_utils = { path = "../utils" }
serde_json = "1.0"
serde = "1.0"
bincode = "1.3.3"
olavm_core = {package = "core", git = "https://github.com/Sin7Y/olavm.git", branch = "pre-alpha"}
# olavm_core = { path = "../../olavm/core", package = "core" }