[package]
name = "olaos_health_check"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
assert_matches = "1.5.0"
tokio = { version = "1", features = ["macros", "rt"] }