[package]
name = "olaos_logs"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
serde = { version = "1", features = ["derive"]}
