[package]
name = "ola_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ola_config = { path = "../config" }
ola_types = { path = "../types" }
ola_dal = { path = "../dal" }
ola_web3_decl = { path = "../web3_decl" }
ola_contracts = { path = "../contracts" }
ola_state = { path = "../state" }
ola_utils = { path = "../utils" }
ola_vm = { path = "../vm" }
olaos_mempool = { path = "../mempool" }
olaos_health_check = { path = "../health_check" }
olaos_logs = { path = "../logs" }
olaos_object_store = { path = "../object_store" }
olaos_queued_job_processor = { path = "../queued_job_processor" }
olaos_merkle_tree = { path = "../merkle_tree" }
olaos_storage = { path = "../storage" }
jsonrpsee = { version = "0.21.0", default-features = false, features = [
    "macros",
    "server",
    "client",
] }
anyhow = "1"
tokio = { version = "=1.35.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web3 = { version = "0.19.0", default-features = false, features = [
    "http-rustls-tls",
    "test",
    "signing",
] }
tower-http = { version = "0.4.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = { version = "0.14.26" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3"
metrics = "0.20"
hex = "0.4"
governor = "0.4.2"
axum = { version = "0.6.19", default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
ctrlc = { version = "3.1", features = ["termination"] }
tracing = "0.1.26"
thiserror = "1.0"
itertools = "0.10.5"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
derivative = "*"
rayon = "*"
olavm_core = { git = "https://github.com/Sin7Y/olavm.git", package = "core", branch = "testnet-alpha"}
# olavm_core = { path = "../../olavm/core", package = "core" }
tempfile = "3.0.2"
zk-vm = {git = "https://github.com/Sin7Y/olavm.git", branch = "testnet-alpha"}
# zk-vm = { path = "../../olavm/zk-vm" }
# ola-executor = { path = "../../olavm/executor", package = "executor" }
ola-executor = {package = "executor", git = "https://github.com/Sin7Y/olavm.git", branch = "testnet-alpha"}
rocksdb = { version = "0.21", default-features = false, features = ["snappy"] }
env_logger = "0.6"
bincode = "1"
olaos_prover_fri_types = { path = "../prover/prover_fri_types" }

[features]
# default = ["server", "client"]
# server = ["jsonrpsee/server"]
# client = ["jsonrpsee/client", "jsonrpsee/ws-client", "jsonrpsee/http-client"]
