[package]
name = "ola_types"
version = "0.1.0"
edition = "2021"

[dependencies]
ola_basic_types = { path = "../basic_types" }
ola_utils = { path = "../utils" }
ola_config ={ path = "../config"}
ethereum_types_old = { package = "ethereum-types", version = "0.12.0" }
web3 = { version= "0.19.0", default-features = false, features = ["http-rustls-tls", "test", "signing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
blake2 = "0.10"
strum = { version = "0.24", features = ["derive"] }