[package]
name = "ola_types"
version = "0.1.0"
edition = "2021"

[dependencies]
ola_basic_types = { path = "../basic_types" }
ola_utils = { path = "../utils" }
ola_config = { path = "../config" }
ola_contracts = { path = "../contracts" }
ethereum_types_old = { package = "ethereum-types", version = "0.12.0" }
web3 = { version= "0.19.0", default-features = false, features = ["http-rustls-tls", "test", "signing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
blake2 = "0.10"
strum = { version = "0.24", features = ["derive"] }
num_enum = "0.6"
once_cell = "1.7"
ethabi = "18.0.0"
rlp = "0.5"
parity-crypto = { version = "0.9", features = ["publickey"] }
olavm_core = {package = "core", git = "https://github.com/Sin7Y/olavm.git"}
olavm_plonky2 = {package = "plonky2", git = "https://github.com/Sin7Y/olavm.git"}
