[package]
name = "ola_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ola_basic_types = { path = "../basic_types" }
olaos_logs = { path = "../logs" }
tokio = { version = "=1.35.0", features = ["time"] }
futures = "0.3"
thiserror = "1.0"
itertools = "0.10.5"
num = { version = "0.3.1", features = ["serde"] }
bigdecimal = { version = "0.2.2", features = ["serde"]}
# olavm_plonky2 = {package = "plonky2", git = "https://github.com/Sin7Y/olavm.git", branch = "testnet-alpha"}
# olavm_core = {package = "core", git = "https://github.com/Sin7Y/olavm.git", branch = "testnet-alpha"}
olavm_core = { path = "../../olavm/core", package = "core" }
olavm_plonky2 = { path = "../../olavm/plonky2/plonky2", package = "plonky2" }
hex = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
byteorder = "1.3"