[package]
name = "ola_vm"
version = "0.1.0"
edition = "2021"

[dependencies]
ola_types = { path = "../types"}
olaos_logs = { path = "../logs" }
ola_utils ={ path = "../utils"}
ola-lang-abi = { git = "https://github.com/Sin7Y/ola-lang-abi.git" }
thiserror = "1.0"
hex = "0.4"
olavm_core = { git = "https://github.com/Sin7Y/olavm", package = "core"}