[package]
name = "ola_web3_decl"
version = "0.1.0"
edition = "2021"

[dependencies]
ola_types = { path = "../types" }
jsonrpsee = { version = "0.19.0", default-features = false, features = ["macros"] }
thiserror = "1.0"

[features]
default = ["server", "client"]
server = ["jsonrpsee/server"]
client = ["jsonrpsee/client"]