[package]
name = "ola_web3_decl"
version = "0.1.0"
edition = "2021"

[dependencies]
ola_types = { path = "../types" }
jsonrpsee = { version = "0.21.0", default-features = false, features = ["macros"] }
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
itertools = "0.10.1"
pin-project-lite = "0.2.13"

[features]
default = ["server", "client"]
server = ["jsonrpsee/server"]
client = ["jsonrpsee/client"]