[package]
name = "olatte"
version = "0.1.0"
edition = "2021"
authors = ["contact@sin7y.org"]
description = "Ola cli tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"
thiserror = "1.0"
ola_assembler = { git = "https://github.com/Sin7Y/olavm.git", branch = "main", package = "assembler" }
ola-lang = { git = "https://github.com/Sin7Y/ola-lang.git", branch = "main" }
ola-lang-abi = { git = "https://github.com/Sin7Y/ola-lang-abi.git", branch = "main" }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1.44"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
inkwell = "0.2.0"
