[package]
name = "olatte"
version = "0.1.0"
edition = "2021"
authors = ["contact@sin7y.org"]
description = "Ola cli tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ola_types = { path = "../../types" }
ola_utils = { path = "../../utils" }
ola_wallet_sdk = { path = "../sdk" }
clap = { version = "4.4.7", features = ["derive", "env", "string"] }
clap_complete = "4.4.4"
thiserror = "1.0"
ola_assembler = { git = "https://github.com/Sin7Y/olavm.git", branch = "pre-alpha", package = "assembler" }
# ola_assembler = { path = "../../../olavm/assembler", package = "assembler" }
ola-lang = { git = "https://github.com/Sin7Y/ola-lang.git", branch = "pre-alpha" }
ola-lang-abi = "1.0.5"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1.44"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
inkwell = "0.2.0"
shellexpand = "3.1.0"
anyhow = "1.0.75"
colored = "2.0.0"
tokio = { version = "=1.35.0", features = ["full"] }
rpassword = "7.2.0"
hex = "0.4.3"
ethereum-types = "0.14.1"
ola_web3_decl = { path = "../../web3_decl", default-features = false, features = [
    "client",
] }
