[package]
name = "ola_signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ola_types = { path = "../../types" }
parity-crypto = { version = "0.9", features = ["publickey"] }
ethereum-types = "0.14.1"
thiserror = "1.0"
secp256k1 = "0.28.0"
sha2 = "0.10.0"
async-trait = "0.1"
