[package]
name = "olaos_prover_fri_types"
version = "0.1.0"
edition = "2021"


[dependencies]
olaos_object_store = { path = "../../object_store" }
ola_types = { path = "../../types" }
serde = { version = "1.0", features = ["derive"] }
ola_circuits = { package = "circuits", git = "https://github.com/Sin7Y/olavm.git", branch = "testnet-alpha" }
olavm_plonky2 = { package = "plonky2", git = "https://github.com/Sin7Y/olavm.git", branch = "testnet-alpha" }