[package]
name = "olaos_witness_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
olaos_logs = { path = "../../logs" }
olaos_object_store = { path = "../../object_store" }
ola_dal = { path = "../../dal" }
ola_config = { path = "../../config" }
ola_types = { path = "../../types" }
ola_utils = { path = "../../utils" }
anyhow = "1.0"
tokio = { version = "1", features = ["time"] }
futures = { version = "0.3", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
bincode = "1"
rand = "0.8"
hex = "0.4"
structopt = "0.3.26"
ctrlc = { version = "3.1", features = ["termination"] }
const-decoder = "0.3.0"